# logger

./: CMakeLists.txt
app/: main.c
include/logger/: config.h  factory.h  logger.h
src/: ILogger.c  console_logger.c  factory.c  file_logger.c
